--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "express": "^4.16.2",
         "http-errors": "^1.7.1",
         "morgan": "^1.9.1",
+        "mqtt": "^5.3.5",
         "pug": "^3.0.1"
     },
     "devDependencies": {
