--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-    "name": "express-ts-template",
+    "name": "el-rojo-botones",
     "version": "1.2.0",
-    "description": "Simple starter template for ExpressJs and TypeScript based on expressjs/generator and TypeScript-Node-Starter",
     "main": "server.js",
     "scripts": {
         "start": "npm run serve",
