--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,32 +1,44 @@
+// AUTOMATICALLY GENERATED FILE. PLEASE DO NOT MODIFY IT MANUALLY
+//
+// PlatformIO Debugging Solution
+//
+// Documentation: https://docs.platformio.org/en/latest/plus/debugging.html
+// Configuration: https://docs.platformio.org/en/latest/projectconf/sections/env/options/debug/index.html
+
 {
-    // Use IntelliSense to learn about possible Node.js debug attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
-    "configurations": [        
+    "configurations": [
         {
-            "type": "node",
-            "request": "attach",
-            "name": "Attach by Process ID",
-            "processId": "${command:PickProcess}",
-            "protocol": "inspector"
+            "type": "platformio-debug",
+            "request": "launch",
+            "name": "PIO Debug",
+            "executable": "/Users/flaviod/Developer/el-rojo-botones/.pio/build/elrojobotones/firmware.elf",
+            "projectEnvName": "elrojobotones",
+            "toolchainBinDir": "/Users/flaviod/.platformio/packages/toolchain-xtensa/bin",
+            "internalConsoleOptions": "openOnSessionStart",
+            "preLaunchTask": {
+                "type": "PlatformIO",
+                "task": "Pre-Debug"
+            }
         },
         {
-            "name": "Attach",
-            "type": "node",
-            "request": "attach",
-            "port": 9229,
-            "address": "localhost",
-            "restart": true,
-            "sourceMaps": true,
-            "outFiles": ["${workspaceRoot}/src"],
-            "skipFiles": [
-                "${workspaceFolder}/app/node_modules/**/*.js"
-            ],
-            "localRoot": "${workspaceRoot}/src",
-            "remoteRoot": "${workspaceRoot}/src",
-            "smartStep": true,
-            "trace": true
+            "type": "platformio-debug",
+            "request": "launch",
+            "name": "PIO Debug (skip Pre-Debug)",
+            "executable": "/Users/flaviod/Developer/el-rojo-botones/.pio/build/elrojobotones/firmware.elf",
+            "projectEnvName": "elrojobotones",
+            "toolchainBinDir": "/Users/flaviod/.platformio/packages/toolchain-xtensa/bin",
+            "internalConsoleOptions": "openOnSessionStart"
         },
+        {
+            "type": "platformio-debug",
+            "request": "launch",
+            "name": "PIO Debug (without uploading)",
+            "executable": "/Users/flaviod/Developer/el-rojo-botones/.pio/build/elrojobotones/firmware.elf",
+            "projectEnvName": "elrojobotones",
+            "toolchainBinDir": "/Users/flaviod/.platformio/packages/toolchain-xtensa/bin",
+            "internalConsoleOptions": "openOnSessionStart",
+            "loadMode": "manual"
+        }
     ]
 }
