--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
         "build": "npm run build-ts",
         "serve": "node dist/server.js",
         "test": "jest --coverage=false --verbose",
-        "watch": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run watch-node\"",
+        "watch": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node,Webpack\" -c \"cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run watch-node\" \"npm run watch-client\"",
         "watch-node": "nodemon dist/server.js",
         "build-ts": "tsc",
+        "build-client": "webpack",
         "watch-ts": "tsc -w",
+        "watch-client": "webpack -w",
         "lint": "eslint src/*.ts",
         "lint-fix": "yarn lint --fix",
         "debug": "npm run build && npm run watch-debug",
@@ -48,6 +50,9 @@
         "prettier": "2.8.8",
         "supertest": "6.3.3",
         "ts-jest": "26.5.6",
-        "typescript": "4.9.5"
+        "ts-loader": "^9.5.1",
+        "typescript": "^4.9.5",
+        "webpack": "^5.90.3",
+        "webpack-cli": "^5.1.4"
     }
 }
