--- a/package.json
+++ b/package.json
@@ -4,26 +4,16 @@
     "main": "server.js",
     "scripts": {
         "start": "npm run serve",
-        "build": "npm run build-ts",
+        "build": "webpack --mode production",
         "serve": "node dist/server.js",
-        "test": "jest --coverage=false --verbose",
-        "watch": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node,Webpack\" -c \"cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run watch-node\" \"npm run watch-client\"",
+        "watch": "concurrently -k -p \"[{name}]\" -n \"Node,Webpack\" -c \"cyan.bold,green.bold\" \"npm run watch-node\" \"npm run watch-webpack\"",
         "watch-node": "nodemon dist/server.js",
-        "build-ts": "tsc",
-        "build-client": "webpack",
-        "watch-ts": "tsc -w",
-        "watch-client": "webpack -w",
+        "watch-webpack": "webpack -w --mode development",
         "lint": "eslint src/*.ts",
         "lint-fix": "yarn lint --fix",
-        "debug": "npm run build && npm run watch-debug",
-        "serve-debug": "nodemon --inspect dist/server.js",
-        "watch-debug": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run serve-debug\"",
-        "typecheck": "tsc --noEmit",
-        "run-prettier": "prettier src/*.ts",
-        "validate-prettiness": "yarn run-prettier -c",
-        "make-prettier": "yarn run-prettier --write"
+        "typecheck": "tsc --noEmit"
     },
-    "author": "",
+    "author": "Flavio De Stefano, Lucas Lencinas",
     "license": "ISC",
     "dependencies": {
         "express": "^4.16.2",
