--- a/tsconfig.client.json
+++ b/tsconfig.client.json
@@ -1,12 +1,14 @@
 {
 	"compilerOptions": {
-	  "outDir": "./dist/",
-	  "noImplicitAny": true,
-	  "module": "es6",
-	  "target": "es5",
-	  "jsx": "react",
-	  "allowJs": true,
-	  "moduleResolution": "node",
-	  "allowSyntheticDefaultImports": true
-	}
+		"module": "es6",
+		"esModuleInterop": true,
+		"target": "es5",
+		"noImplicitAny": true,
+		"moduleResolution": "node",
+		"jsx": "react",
+		"allowSyntheticDefaultImports": true
+	},
+	"include": [
+		"src/**/*"
+  ]
  }
