--- a/platformio.ini
+++ b/platformio.ini
@@ -2,14 +2,14 @@
 platform = espressif8266
 framework = arduino
 monitor_speed = 115200
-
-
-[env:elrojobotones]
-board = nodemcuv2
 lib_deps = 
 	bblanchon/ArduinoJson@^6.19.4
 	knolleary/PubSubClient@^2.8.0
 	https://github.com/tzapu/WiFiManager
+	arduinogetstarted/ezButton
+
+[env:elrojobotones]
+board = nodemcuv2
 build_flags = 
 	${env.build_flags}
 	-D BOARD_ID='"elrojobotones"'
